tests/paczka1/small_fuzzy/56467859.err
Error in line 9: A968 S61 408,78
Error in line 3: gJAEW6 A968 58,4
Error in line 11: GHsy S61 23,8
